# BrickBreaker-1

./: .gitignore  CMakeLists.txt  README.md
BrickBraker/: Ball.cpp  Ball.hpp  Brick.cpp  Brick.hpp  Bricks.cpp  Bricks.hpp  GameManager.cpp  GameManager.hpp  InputManager.cpp  InputManager.hpp  Menu.cpp  Menu.hpp  Paddle.cpp  Paddle.hpp  main.cpp
BrickBraker.xcodeproj/: project.pbxproj
BrickBraker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BrickBraker.xcodeproj/xcuserdata/henrik.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: main.cpp
src/cppfiles/: Ball.cpp  Brick.cpp  Bricks.cpp  CollisionManager.cpp  CollisionManager.h  GameManager.cpp  GameMenu.cpp  InputManager.cpp  MainMenuState.cpp  Paddle.cpp  PlayingState.cpp  Renderer.cpp
src/header/: Ball.h  Brick.h  Bricks.h  CollisionManager.h  GameManager.h  GameMenu.h  GameState.h  InputAction.h  InputManager.h  MainMenuState.h  Paddle.h  PlayingState.h  Renderer.h  Status.h
